# Polymer

./: #CMakeLists.txt#  .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md  make.sh  make.sh~
run/: #kladd.txt#  #polymer_t.out#  plots.py  polymerX
src/PythonScripts/: polymer.py  polymer2.py
src/polymer/: CMakeLists.txt  CMakeLists.txt~  polymer.cpp  polymer.h  polymer_back.cpp  util.h  util.h~
src/solution/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt~  solution.cpp
