SET ( MAINSRC
          solution.cpp
)


SET( executable   polymerX )

INCLUDE_DIRECTORIES   ("${PROJECT_SOURCE_DIR}/polymer")

ADD_EXECUTABLE(        ${executable} ${MAINSRC} )
TARGET_LINK_LIBRARIES( ${executable} polymer )



#install (TARGETS ${executable}
#         RUNTIME DESTINATION ${PROJECT_BINARY_DIR}/bin)
